# simple-image-viewer

./: .eslintignore  .eslintrc.json  .prettierrc.yml  CLAUDE.md  README.md  eslint.config.js  explorer.html  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: settings.json  settings.local.json
.claude/agents/: rust-reviewer.md  solidjs-reviewer.md
.claude/rules/: architecture.md  rust-backend.md  solidjs-frontend.md  tauri-ipc.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/subagents/: rust-reviewer.md  solidjs-reviewer.md
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: tauri_release.yml
docs/: dev-prod-environment-separation.md  explorer-performance-optimization.md  explorer-sort-search-implementation.md  grpc-to-single-instance-migration.md  memory-leak-fix-plan.md  onnx-lazy-download-implementation.md  tauri-v2-migration-plan.md
src/: App.tsx  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/proto/: add_tab.proto  new_window.proto
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: explorer.rs  explorer_helpers.rs  mod.rs  viewer.rs
src-tauri/src/grpc/: add_tab.rs  mod.rs  new_window.rs  server.rs
src-tauri/src/service/: app_state.rs  database.rs  embedding_service.rs  explorer_state.rs  explorer_types.rs  mod.rs  model_downloader.rs  types.rs  viewer_state.rs
src-tauri/src/utils/: file_utils.rs  mod.rs  thumbnail_utils.rs  watcher_utils.rs
src/assets/fontawesome/css/: all.css  brands.css  brands.min.css  fontawesome.css  regular.css  regular.min.css  solid.css  svg-with-js.css  svg-with-js.min.css  v4-font-face.css  v4-font-face.min.css  v4-shims.css  v4-shims.min.css  v5-font-face.css  v5-font-face.min.css
src/components/Loading/: Loading.tsx
src/components/ModelDownloadProgress/: ModelDownloadProgress.tsx
src/components/Pagination/: Pagination.tsx
src/components/Tab/: Tabs.tsx
src/features/DirectoryTree/components/: DirectoryList.tsx  DirectoryNode.tsx  FileNode.tsx  ImageNode.tsx  NodeBaseStyle.tsx  VideoNode.tsx  ZipNode.tsx
src/features/DirectoryTree/routes/: PathSelection.tsx
src/features/DirectoryTree/types/: DirectoryTree.ts
src/features/DirectoryTree/utils/: convertEntryToTree.ts  extractFirstFiles.ts  filterNonImageFiles.ts  findViewingFiles.ts
src/features/Explorer/types/: ExplorerQuery.ts
src/features/Folder/routes/: Folder.tsx
src/features/Folder/types/: Thumbnail.ts
src/features/Image/ImageCanvas/: index.tsx
src/features/directory-tree/components/: DirectoryList.tsx  DirectoryNode.tsx  FileNode.tsx  NodeBaseStyle.tsx  ZipNode.tsx
src/features/directory-tree/routes/: PathSelection.tsx
src/features/filepath/consts/: videos.ts
src/features/filepath/utils/: checkers.ts
src/features/image/routes/: ImageCanvas.tsx
src/pages/explorer/: Explorer.tsx  ExplorerTab.tsx  ExplorerTabs.tsx  index.tsx  types.ts
src/pages/explorer/components/: ExplorerToolbar.tsx  FolderGrid.tsx
src/pages/explorer/hooks/: useExplorerTab.ts
src/pages/viewer/: Viewer.tsx  ViewerTab.tsx  ViewerTabs.tsx  index.tsx
src/utils/: path.ts
