[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }
tonic-build = { version = "0.9.2" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all", "cli", "updater"] }
base64 = { version = "0.21.0" }
zip = { version = "0.6.2" }
notify = { version = "5.0.0" }
sysinfo = { version = "0.28.4" }
interprocess = { version = "1.1.1" }
tonic = { version = "0.9.2" }
prost = { version = "0.11.0" }
futures = "0.3.28"
tokio = { version = "1.28.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["time"] }
stream-cancel = "0.8.1"
anyhow = { version = "1.0.63" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
