[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = { version = "0.11.0" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
base64 = { version = "0.22.1" }
zip = { version = "1.1.3" }
notify = { version = "6.1.1" }
sysinfo = { version = "0.30.11" }
interprocess = { version = "2.0.0" }
tonic = { version = "0.11.0" }
prost = { version = "0.12.4" }
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["time"] }
stream-cancel = "0.8.2"
anyhow = { version = "1.0.82" }
tauri-plugin-store = { version = "2" }
fs_extra = "1.3.0"
natord = "1.0.9"
dirs = "6"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
