[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
base64 = { version = "0.22.1" }
zip = { version = "1.1.3" }
notify = { version = "6.1.1" }
sysinfo = { version = "0.30.11" }
tokio = { version = "1.37.0", features = ["full"] }
anyhow = { version = "1.0.82" }
tauri-plugin-store = { version = "2" }
fs_extra = "1.3.0"
natord = "1.0.9"
dirs = "6"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"

# Phase 2: SQLite + サムネイルデータ蓄積
rusqlite = { version = "0.32", features = ["bundled"] }
image = "0.25"
sha2 = "0.10"

# Phase 4: CLIP 埋め込みベース ML リコメンド
# tract-onnx: Pure Rust ONNX ランタイム (外部DLL不要)
tract-onnx = "0.21"
ndarray = "0.16"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
